# awesome_linal

./: CMakeLists.txt  README.md
include/awesome_linal/matrix/: matrix.inl
include/awesome_linal/solvers/: gaus_seidel.hpp  simple_iteration.hpp
src/: CMakeLists.txt  main.cpp
src/modules/: CMakeLists.txt
src/modules/matrix/: CMakeLists.txt  matrix.hpp
src/modules/solvers/: CMakeLists.txt
src/modules/solvers/gauss_seidel/: gaus_seidel.hpp
src/modules/solvers/simple_iteration/: simple_iteration.hpp
tests/matrix/: matrix_unit_tests.cpp
